add method sale